[package]
name = "cheshmhayash"
version = "0.2.0"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
config = { version = "0.11.0", features = ["toml"] }
actix-web = "3.3.2"
actix-files = "0.5.0"
