[package]
name = "cheshmhayash"
version = "0.4.0"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
edition = "2021"
rust-version = "1.88"
license = "MIT"
description = "NATS administration dashboard over the NATS protocol"

[dependencies]
actix-web = "4.13"
actix-files = "0.6"
actix-cors = "0.7"
anyhow = "1.0"
async-nats = "0.47"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15", features = ["toml"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
