[package]
name = "cheshmhayash"
version = "0.1.0"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
