[package]
name = "cheshmhayash"
version = "0.1.0"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.10"
actix-web = "2.0"
actix-rt = "1.0"
